--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+env_logger = "0.11.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
